# vortex

./: .gitignore  pyproject.toml
vortex/dst/: base.py  local.py  ssh.py
vortex/manage/: cli.py
vortex/output/: base.py  local.py  ssh.py
vortex/remote/: base.py  ssh.py
vortex/tasks/: base.py  binary.py  cmake.py  compiler.py  git.py  process.py  rust.py  utils.py
vortex/tasks/epics/: base.py  epics_base.py  ioc.py
vortex/utils/: files.py  log.py  path.py  run.py
