[tool.poetry]
name = "vortex"
version = "0.1.0"
description = "Heterogenous build automation tool"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
toml = "^0.10.2"
colorama = "^0.4.6"
dataclass-type-validator = "^0.1.2"

[tool.poetry.dev-dependencies]
mypy = "^1.3.0"
black = "^23.3.0"
types-toml = "^0.10.8"
types-colorama = "^0.4.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 128

[tool.mypy]
strict = true
namespace_packages = true
explicit_package_bases = true
